--- a/src/components/tabs/tabs.html
+++ b/src/components/tabs/tabs.html
@@ -1,86 +1,18 @@
-<!-- <ion-footer no-border>
-  <ion-toolbar>
-    <div id="onsite-nav">
-      <button ion-button icon-only [disabled]="allTabs.disabled" (tap)="goToPage(tab.name)" (press)="aboutPage($event, tab.name)" *ngFor="let tab of tabInfo; let i=index">
-        <ion-icon [class.hlght]="tab.active" id="tab{{i+1}}" [name]="tab.icon">
-          <div class="badge-container" >
-            <div class="msg-badge" [class.hide]='tab.hideBadge'>{{tab.badgeCount}}</div>
-            <div class="waiting-badge waiting-gif" *ngIf="!hider[i]"></div>
-          </div>
-        </ion-icon>
-      </button>
-    </div>
-  </ion-toolbar>
-</ion-footer> -->
-
-
-<!-- <ion-footer no-border>
-  <ion-toolbar> -->
-    <div class="onsite-tab-bar" id="onsite-nav" [class.disabled]="tabServ.isDisabled()" (pan)="tabServ.handleSwipe($event)">
-      <div class="onsite-tab-button" [class.hide]="tab.show === false || tab.role==='dev' && !ud.isDeveloper()" [class.hlght]="tabServ.isActive(i)" (click)="tabServ.goToPage(tab.name)" *ngFor="let tab of tabServ.tabInfo; let i=index">
-        <!-- <div *ngIf="tab.show === true; then visibleTab; else invisibleTab"></div> -->
-        <div class="icon-container">
-          <i class="tab-icon-ionic" [ngClass]="tabServ.getIcon(i)"></i>
-          <div class="badge-container">
-            <div class="msg-badge" [class.hide]="tabServ.getBadgeCount(i) < 1">{{tabServ.getBadgeCount(i)}}</div>
-            <!-- <div class="waiting-badge waiting-gif" *ngIf="!getHider(i)"></div> -->
-            <!-- <div class="waiting-badge waiting-gif" *ngIf="!getHider(i)"> -->
-            <!-- <div class="sk-circle waiting-badge" *ngIf="!getHider(i)"> -->
-            <div class="sk-circle waiting-badge" [class.hideSpinner]="tabServ.isHidden(i)">
-              <div class="sk-circle1 sk-child"></div>
-              <div class="sk-circle2 sk-child"></div>
-              <div class="sk-circle3 sk-child"></div>
-              <div class="sk-circle4 sk-child"></div>
-              <div class="sk-circle5 sk-child"></div>
-              <div class="sk-circle6 sk-child"></div>
-              <div class="sk-circle7 sk-child"></div>
-              <div class="sk-circle8 sk-child"></div>
-              <div class="sk-circle9 sk-child"></div>
-              <div class="sk-circle10 sk-child"></div>
-              <div class="sk-circle11 sk-child"></div>
-              <div class="sk-circle12 sk-child"></div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- <ng-template #visibleTab>
-      <div class="icon-container">
-        <i class="tab-icon-ionic" [ngClass]="tabServ.getIcon(i)"></i>
-        <div class="badge-container">
-          <div class="msg-badge" [class.hide]="tabServ.getBadgeCount(i) < 1">{{tabServ.getBadgeCount(i)}}</div> -->
-          <!-- <div class="waiting-badge waiting-gif" *ngIf="!getHider(i)"></div> -->
-          <!-- <div class="waiting-badge waiting-gif" *ngIf="!getHider(i)"> -->
-          <!-- <div class="sk-circle waiting-badge" *ngIf="!getHider(i)"> -->
-          <!-- <div class="sk-circle waiting-badge" [class.hideSpinner]="tabServ.isHidden(i)">
-            <div class="sk-circle1 sk-child"></div>
-            <div class="sk-circle2 sk-child"></div>
-            <div class="sk-circle3 sk-child"></div>
-            <div class="sk-circle4 sk-child"></div>
-            <div class="sk-circle5 sk-child"></div>
-            <div class="sk-circle6 sk-child"></div>
-            <div class="sk-circle7 sk-child"></div>
-            <div class="sk-circle8 sk-child"></div>
-            <div class="sk-circle9 sk-child"></div>
-            <div class="sk-circle10 sk-child"></div>
-            <div class="sk-circle11 sk-child"></div>
-            <div class="sk-circle12 sk-child"></div>
-          </div>
-        </div>
-      </div>
-    </ng-template>
-    <ng-template #invisibleTab></ng-template> -->
-    <!-- </ion-toolbar>
-</ion-footer> -->
-
-<!-- <div class="onsite-tab-bar" id="onsite-nav" *ngIf="tabsReady">
-  <div class="onsite-tab-button" [class.clickDisabled]="tabServ.isDisabled()" (click)="goToPage(tab.name)" *ngFor="let tab of tabInfo; let i=index">
+<div class="onsite-tab-bar" id="onsite-nav" [class.disabled]="tabServ.isDisabled()" (swipe)="tabServ.handleSwipeOnTabs($event)">
+  <div class="onsite-tab-button" [class.hide]="tab.show === false || tab.role==='dev' && !ud.isDeveloper()" [class.hlght]="tabServ.isActive(i)" (click)="tabServ.goToPage(tab.name)" *ngFor="let tab of tabServ.tabInfo; let i=index">
+    <!-- <div *ngIf="tab.show === true; then visibleTab; else invisibleTab"></div> -->
     <div class="icon-container">
-      <i class="tab-icon-ionic" [ngClass]="getIcon(i)"></i>
+      <i class="tab-icon-ionic" [ngClass]="tabServ.getIcon(i)" *ngIf="i!==1"></i>
+      <span class="tab-dual-icon" *ngIf="i===1">
+        <i class="tab-icon-ionic dual-icon first" [ngClass]="tabServ.getIcon(i)"></i>
+        <span class="fa fa-exclamation dual-icon second">!</span >
+      </span>
       <div class="badge-container">
-        <div class="msg-badge" [class.hide]="tab.hideBadge">{{tab.badgeCount}}</div>
-        <div class="waiting-badge waiting-gif" *ngIf="!hider[i]"></div> -->
-        <!-- <div class="sk-circle waiting-badge" [class.hideSpinner]="hideArray[i]">
+        <div class="msg-badge" [class.hide]="tabServ.getBadgeCount(i) < 1">{{tabServ.getBadgeCount(i)}}</div>
+        <!-- <div class="waiting-badge waiting-gif" *ngIf="!getHider(i)"></div> -->
+        <!-- <div class="waiting-badge waiting-gif" *ngIf="!getHider(i)"> -->
+        <!-- <div class="sk-circle waiting-badge" *ngIf="!getHider(i)"> -->
+        <div class="sk-circle waiting-badge" [class.hideSpinner]="tabServ.isHidden(i)">
           <div class="sk-circle1 sk-child"></div>
           <div class="sk-circle2 sk-child"></div>
           <div class="sk-circle3 sk-child"></div>
@@ -93,8 +25,8 @@
           <div class="sk-circle10 sk-child"></div>
           <div class="sk-circle11 sk-child"></div>
           <div class="sk-circle12 sk-child"></div>
-        </div> -->
-      <!-- </div>
+        </div>
+      </div>
     </div>
   </div>
-</div> -->
+</div>
