--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,11 +1,13 @@
   page-popover-template>ion-content>div.scroll-content {
-    height: 300vh;
+    // height: 300vh;
   }
 
   page-popover-template>ion-content>div.scroll-content>button {
-    margin-bottom: 1500px;
+    // margin-bottom: 1500px;
   }
 
+// page-popover-template {
+// }
 page-home {
   // ion-content > div.scroll-content {
   //   padding-top: 3px !important;
