--- a/src/components/tabs/tabs.scss
+++ b/src/components/tabs/tabs.scss
@@ -129,6 +129,7 @@ onsite-tabs {
         i.tab-icon-ionic {
           color: #488aff;
           font-weight: bold;
+
         }
       }
       // background-color: rgba(75, 170, 255, 0.5);
@@ -173,6 +174,29 @@ onsite-tabs {
     font-weight: normal;
     color: rgba(80, 80, 80, 1.0);
     // text-shadow: 5px 2px 10px 0px rgba(50, 50, 50, 0.7);
+  }
+  .tab-dual-icon {
+    position: relative;
+  }
+  .dual-icon {
+    &.first {
+      // position: absolute;
+      top: 0;
+      left: 0;
+      // bottom: 0;
+      // right: 0;
+    }
+    &.second {
+      text-align: center;
+      position: absolute;
+      font-size: 36px;
+      width: 21px;
+      height: 42px;
+      top: 0;
+      left: 0;
+      // bottom: 0;
+      // right: 0;
+    }
   }
 
   div.badge-container {
