--- a/src/pages/reports-flagged/reports-flagged.scss
+++ b/src/pages/reports-flagged/reports-flagged.scss
@@ -22,6 +22,59 @@ page-reports-flagged {
   .invisibleIcon {
     visibility: hidden;
   }
+  .report-table {
+    table-layout: fixed;
+    width: 100%;
+    font-family: "Roboto Condensed", sans-serif;
+    font-size: 16px;
+    background-color: white;
+    tr {
+      td {
+        // border: 1px dotted lightgrey;
+        &.label {
+          font-weight: bold;
+          // text-align: right;
+          padding-right: 2px;
+          width: 62px;
+          min-width: 62px;
+          max-width: 62px;
+        }
+        &.data {
+
+        }
+        &.label-notes {
+          font-weight: bold;
+          text-align: right;
+          padding-right: 2px;
+        }
+        &.data-notes {
+          white-space: normal;
+          .notes-wrapper {
+            display: block;
+            background-color: white;
+            max-height: 100px;
+            overflow-y: auto;
+            white-space: normal;
+            border: 1px solid lightgrey;
+            // &::-webkit-scrollbar {
+            //   // width: 16px;
+            //   // display: none;
+            //   opacity: 1;
+            // }
+            // &::-webkit-scrollbar-thumb {
+            //   background: rgba(180, 180, 180, 1);
+            //   border-left: 3px solid white;
+            //   border-right: 3px solid white;
+            // }
+            // &:hover {
+            //   background-color: unset;
+            // }
+          }
+          // max-height:
+        }
+      }
+    }
+  }
   .reports-container {
     .report-list {
       .report-item-sliding {
@@ -39,6 +92,7 @@ page-reports-flagged {
         .report-item {
           -webkit-tap-highlight-color: unset !important;
           background-color: transparent;
+          border: 1px dotted lightgrey;
           display: flex;
           flex-flow: row wrap;
           justify-content: flex-start;
@@ -109,10 +163,17 @@ page-reports-flagged {
               text-align: left;
             }
             .label-notes {
+              display: inline-block;
+              flex: 0 1 auto;
+              max-width: 80px;
+              min-width: 80px;
+              width: 20%;
               font-weight: bold;
+              text-align: right;
+              padding-right: 2px;
             }
             .data-notes {
-
+              width: 100%;
             }
           }
         }
